test/typeerrors/Examples/LotsOfTypeErrors.hs
module LotsOfTypeErrors where

listError = [True,1,2,3,4,"hello world!"]

int :: Int
int = True

bool :: Bool
bool = 4

wrongApplication = "hello" "world"
